k8s/08-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  labels:
    app: postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow inbound PostgreSQL traffic ONLY from catalog-api pods
    - from:
        - podSelector:
            matchLabels:
              app: catalog-api
      ports:
        - protocol: TCP
          port: 5432
  egress:
    # Allow DNS resolution (kube-dns) so Postgres can resolve service names if needed
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
